// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iBPRYJ ljKKDo"
>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iBPRYJ ljKKDo"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iBPRYJ ljKKDo"
>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fubCfw chHTAM"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
